[gd_scene load_steps=48 format=3 uid="uid://cdgrarp45x46n"]

[ext_resource type="Script" uid="uid://b8gke1sfhm0ck" path="res://enemy/enemy.gd" id="1_ppra6"]
[ext_resource type="Script" uid="uid://bf7sx4c8hbsav" path="res://enemy/state_machine.gd" id="2_p200p"]
[ext_resource type="Script" uid="uid://bjwnk2125y0oq" path="res://enemy/idle.gd" id="3_pmsee"]
[ext_resource type="Texture2D" uid="uid://d2pigcyhnk1y6" path="res://enemy/Bat with VFX/Bat-IdleFly.png" id="4_p200p"]
[ext_resource type="Texture2D" uid="uid://835xunpt47ik" path="res://enemy/Bat with VFX/Bat-Attack1.png" id="4_y5vj3"]
[ext_resource type="Texture2D" uid="uid://cvfmgdt6s8usq" path="res://enemy/Bat with VFX/Bat-Die.png" id="5_5ffra"]
[ext_resource type="Texture2D" uid="uid://deoc23afbppn7" path="res://enemy/Bat with VFX/Bat-Run.png" id="7_e355f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1wwld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y5vj3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_78jik"]
atlas = ExtResource("4_y5vj3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3pv7"]
atlas = ExtResource("4_y5vj3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoplw"]
atlas = ExtResource("4_y5vj3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yflr"]
atlas = ExtResource("4_y5vj3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf88j"]
atlas = ExtResource("4_y5vj3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbw0t"]
atlas = ExtResource("4_y5vj3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjonb"]
atlas = ExtResource("4_y5vj3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rovcg"]
atlas = ExtResource("4_y5vj3")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2hyd"]
atlas = ExtResource("5_5ffra")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6eq3"]
atlas = ExtResource("5_5ffra")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34gv7"]
atlas = ExtResource("5_5ffra")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg32h"]
atlas = ExtResource("5_5ffra")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfy00"]
atlas = ExtResource("5_5ffra")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iocd2"]
atlas = ExtResource("5_5ffra")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05kf6"]
atlas = ExtResource("5_5ffra")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26s8d"]
atlas = ExtResource("5_5ffra")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipcql"]
atlas = ExtResource("5_5ffra")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb0mw"]
atlas = ExtResource("5_5ffra")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqeel"]
atlas = ExtResource("5_5ffra")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdk38"]
atlas = ExtResource("5_5ffra")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgpkr"]
atlas = ExtResource("4_p200p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khu3m"]
atlas = ExtResource("4_p200p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5p1p"]
atlas = ExtResource("4_p200p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpwvk"]
atlas = ExtResource("4_p200p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bxjs"]
atlas = ExtResource("4_p200p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70x6l"]
atlas = ExtResource("4_p200p")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k585h"]
atlas = ExtResource("4_p200p")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyqw8"]
atlas = ExtResource("4_p200p")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ont7t"]
atlas = ExtResource("4_p200p")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3n84"]
atlas = ExtResource("7_e355f")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv8bv"]
atlas = ExtResource("7_e355f")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_730sd"]
atlas = ExtResource("7_e355f")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mh77"]
atlas = ExtResource("7_e355f")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8oin"]
atlas = ExtResource("7_e355f")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydqoe"]
atlas = ExtResource("7_e355f")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3etd"]
atlas = ExtResource("7_e355f")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ywj"]
atlas = ExtResource("7_e355f")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nfqie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78jik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3pv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoplw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yflr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf88j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbw0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjonb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rovcg")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2hyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6eq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34gv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg32h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfy00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iocd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05kf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26s8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipcql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb0mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqeel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdk38")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgpkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khu3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5p1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpwvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bxjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70x6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k585h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyqw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ont7t")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3n84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv8bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_730sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mh77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8oin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydqoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3etd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ywj")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}]

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_ppra6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1wwld")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2_p200p")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("3_pmsee")

[node name="walk" type="Node2D" parent="StateMachine"]

[node name="attack" type="Node2D" parent="StateMachine"]

[node name="player_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detector"]
shape = SubResource("CircleShape2D_y5vj3")
debug_color = Color(0.946593, 0.136296, 0.473263, 0.42)

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nfqie")
animation = &"die"
autoplay = "idle"
frame = 11
frame_progress = 1.0
